--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,34 +13,9 @@
 		<div id="page-wrapper">
 			<%-include('../views/layouts/layout-index.ejs')%>
 			
-			<style>
-				.float {
-    position: fixed;
-	z-index: 9999;
-    width: 60px;
-    height: 60px;
-    bottom: 20px;
-    right: 40px;
-    background-color:#fdfdfd00;
-    color: rgb(255, 255, 255);
-    border-radius: 50px;
-    text-align: center;
-  
-    transition: background-color 0.3s ease;
-    text-decoration: none;
-  }
-  
-    
-    .float:hover {
-      color: rgb(255, 255, 255); /* Cambia el color cuando se pasa el mouse sobre el enlace */
-      text-decoration: none;  
-  }
-			</style>
-			<a href="/index#banner" class="float">
-				Inicio
-				<img src="https://storage.googleapis.com/primerstorage/LogoA-removebg-preview.png" alt="Azurduy & Asociados" style="max-width: 100%; height: 50px;">
-				
-			  </a>
+			
+			
+			
 			<!-- Banner -->
 				<section id="banner">
 					<div class="content">
@@ -49,7 +24,7 @@
 							<p>NOSOTROS LUCHAMOS. <BR>
 								USTED GANA. ELLOS PAGAN.</p>
 						</header>
-						<span class="image"><img src="https://storage.googleapis.com/primerstorage/logofondo.png" alt="" /></span>
+						<span class="image"><img src="https://storage.googleapis.com/primerstorage/LogoA-removebg-preview.png" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
@@ -62,17 +37,15 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>Estudio Jurídico</h2>
+										<h2>Sobre Nosotros</h2>
 										<p>Azurduy & Asociados</p>
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>En nuestro bufete de abogados, nos enorgullece ofrecer servicios de asesoramiento legal de alta calidad a nuestros clientes.
-										Contamos con un equipo de abogados altamente capacitados y experimentados que están comprometidos en brindar soluciones legales efectivas y personalizadas a cada caso. Nos enfocamos en comprender las necesidades y objetivos de nuestros clientes y trabajamos incansablemente para garantizar su éxito.
-									</p>
+									<p>En Azurduy & Asociados, ofrecemos asesoramiento legal de alta calidad y soluciones efectivas y personalizadas para cada caso. </p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Desde asuntos legales complejos hasta consultas legales cotidianas, estamos aquí para ayudarte en cada paso del camino. Con nuestro enfoque orientado al cliente y nuestra amplia experiencia legal, puedes confiar en nosotros para proteger tus derechos y obtener los resultados que deseas. ¡Contáctanos hoy para descubrir cómo podemos ayudarte!</p>
+									<p>Confíe en nosotros para representarlo y proteger sus intereses legales. Contáctenos hoy mismo para obtener una consulta y descubra cómo podemos ayudarlo.</p>
 								</div>
 							</div>
 						</div>
@@ -166,13 +139,13 @@
 						<p>ivanazurduye@hotmail.com</p></li>
 					</ul>
 					<ul class="icons">
-					<li><a href="#" class="icon solid alt fa-map-marked-alt"><span class="label">GitHub</span></a>
+					<li><a href="https://www.google.com/maps/place/Edificio+Alborada/@-16.4986864,-68.1331907,20.33z/data=!4m10!1m2!2m1!1scalle+juan+de+la+riva+esquina+loayza!3m6!1s0x915f2071b8160afd:0x2af55d882181942a!8m2!3d-16.4987579!4d-68.1328539!15sCiRjYWxsZSBqdWFuIGRlIGxhIHJpdmEgZXNxdWluYSBsb2F5emFaJiIkY2FsbGUganVhbiBkZSBsYSByaXZhIGVzcXVpbmEgbG9heXphkgETY29uZG9taW5pdW1fY29tcGxleJoBJENoZERTVWhOTUc5blMwVkpRMEZuU1VOTGFrbGxhSHBuUlJBQuABAA!16s%2Fg%2F11dztxswkd?hl=es&entry=ttu" class="icon solid alt fa-map-marked-alt" target="_blank"><span class="label">GitHub</span></a>
 						</li>
 						<li><p>Calle Juan de la Riva Nº1406,Esq. Loayza Edif. "Alborada". Piso 13 Of. 1301</p></li>
 					</ul>
 						<ul class="copyright">
 						<li>&copy; 2023 Derechos reservados. Los hijos del bicho</li>
-						<li><a href="#" class="icon brands alt fa-galactic-republic"></a></li>
+						<li> <a href="https://azurduyandasociadosadmin.onrender.com/" class="icon brands alt fa-galactic-republic"></a></li>
 					</ul>
 				</footer>
 
