--- a/views/mis-casos.ejs
+++ b/views/mis-casos.ejs
@@ -53,7 +53,7 @@
           .container a {
             display: inline-block;
             padding: 8px 16px;
-            background-color: #942833;
+            background-color: #2277AF;
             color: #fff;
             text-decoration: none;
             border-radius: 5px;
