--- a/views/Citas.ejs
+++ b/views/Citas.ejs
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/main.css" />
+		<link rel="stylesheet" href="/sass/main.scss">
+		<noscript><link rel="stylesheet" href="/public/css/noscript.css" /></noscript>
     <title>Calendario</title>
 
     
@@ -46,10 +49,16 @@
   </div>
   <style>
  .fc-day {
-    background-color: #000000d5;
+    background-color: #FFFF;
     border: none;
     padding: 30px;
+    color: #CCCCCC;
+    font-weight: bold;
     
+  }
+  
+  fc-daygrid-day-number{
+    color: #1d1e20;
   }
     .modal {
       color: rgb(255, 255, 255);
@@ -61,8 +70,8 @@
       width: 100%;
       height: 100%;
       overflow: auto;
-      background-color: rgb(0, 0, 0);
-      background-color: rgba(0, 0, 0, 0.4);
+      background-color:#1d1e20;
+      background-color: #1d1e20;
     }
   
     .modal-content {
@@ -102,4 +111,5 @@
   </div>
   
   </body>
+  
 </html>
