--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -90,7 +90,7 @@
             border-radius: 5px;
             font-size: 16px;
             font-weight: bold;
-            background-color: #942833;
+            background-color: #2277AF;
             color: #fff;
             cursor: pointer;
           }
