--- a/views/detalle-caso.ejs
+++ b/views/detalle-caso.ejs
@@ -46,7 +46,7 @@
       .container a {
         display: inline-block;
         padding: 8px 16px;
-        background-color: #942833;
+        background-color: #2277AF;
         color: #fff;
         text-decoration: none;
         border-radius: 5px;
