--- a/views/layouts/layout-index.ejs
+++ b/views/layouts/layout-index.ejs
@@ -11,7 +11,7 @@
   <div id="page-wrapper">
 
     <!-- Header -->
-      <header id="header">
+      <header id="header" style="position: fixed;">
         <h1 id="logo">
           <a href="/index">
             <img src="https://storage.googleapis.com/primerstorage/LogoA-removebg-preview.png" alt="Azurduy & Asociados" style="max-width: 100%; height: 50px;">
