--- a/views/layouts/layoutP.ejs
+++ b/views/layouts/layoutP.ejs
@@ -9,9 +9,14 @@
 </head>
 <body>
   <div id="page-wrapper">
+<style>
+ 
 
+
+
+</style>
     <!-- Header -->
-      <header id="header">
+      <header id="header" style="position: fixed;"> 
         <h1 id="logo">
           <a href="/index">
             <img src="https://storage.googleapis.com/primerstorage/LogoA-removebg-preview.png" alt="Azurduy & Asociados" style="max-width: 100%; height: 50px;">
