--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,80 +1,82 @@
-
-
-  <!-- 2da pagina -->
-  <!DOCTYPE html>
-  <html lang="en">
-     <head>
-        <title>Inicio de sesion</title>
-      
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/css/login2style.css">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Inicio de sesión</title>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
         <script>
-          function togglePassword() {
-            var passwordField = document.getElementById("password");
-            var eyeIcon = document.getElementById("eye");
-      
-            if (passwordField.type === "password") {
-              passwordField.type = "text";
-              eyeIcon.className = "fa fa-eye-slash";
-            } else {
-              passwordField.type = "password";
-              eyeIcon.className = "fa fa-eye";
-            }
+          function onSubmit(token) {
+            document.getElementById("login").submit();
           }
-          
         </script>
-        <style>
-         
+    <!-- Tus etiquetas de encabezado -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/login2style.css">
+    <script>
+      function togglePassword() {
+        var passwordField = document.getElementById("password");
+        var eyeIcon = document.getElementById("eye");
 
-        </style>
-      </head>
-  <body>
-     <div class="background">
-       <div class="shape"></div>
-       <div class="shape"></div>
-     </div>
+        if (passwordField.type === "password") {
+          passwordField.type = "text";
+          eyeIcon.className = "fa fa-eye-slash";
+        } else {
+          passwordField.type = "password";
+          eyeIcon.className = "fa fa-eye";
+        }
+      }
+    </script>
     
-     
-      <div class="background-container">
-        <div class="logo-container">
-          <img src="https://storage.googleapis.com/primerstorage/LogoA-removebg-preview.png" alt="Logo del bufete de abogados">
-          <div class="text-container">
-            <h1 style="color: white; font-family: 'Poppins',sans-serif;">Azurduy & Asociados</h1>
-          </div>
+    <style>
+      /* Tus estilos personalizados */
+    </style>
+  </head>
+  <body>
+    <div class="background">
+      <div class="shape"></div>
+      <div class="shape"></div>
+    </div>
+
+    <div class="background-container">
+      <div class="logo-container">
+        <img src="https://storage.googleapis.com/primerstorage/LogoA-removebg-preview.png" alt="Logo del bufete de abogados">
+        <div class="text-container">
+          <h1 style="color: white; font-family: 'Poppins',sans-serif;">Azurduy & Asociados</h1>
         </div>
       </div>
-    
-    
-    
-    
-     <form action="/login" method="post">
-      
-       <% const disableInputs = error && error.length > 0 && error[0].startsWith('Demasiadas solicitudes'); %>
-       <% if (error && error.length > 0) { %>
-         <div class="alert alert-danger" role="alert">
-           <%= error[0] %>
-         </div>
-       <% } %>
-       <h3>Inicio de sesión</h3>
-       
-       <label for="username">Nombre de usuario</label>
-       <input type="text" name="username" maxlength="20" placeholder="Usuario123" id="username" <% if (disableInputs) { %>disabled<% } %>>
-   
-       <label for="password">Contraseña</label>
-       <input type="password"name="password" placeholder="Contraseña123" id="password" <% if (disableInputs) { %>disabled<% } %>>
-       <span><i class="fa fa-eye" aria-hidden="true"  maxlength="20" type="button" id="eye" onclick="togglePassword()"></i></span>
-  
-       <button type="submit" <%= error && error.length > 0 && error[0].startsWith('Demasiadas solicitudes') ? 'disabled' : '' %> > Iniciar sesión </button>
-       <div class="">
+    </div>
+
+    <form action="/login" method="post" id="login">
+      <% const disableInputs = error && error.length > 0 && error[0].startsWith('Demasiadas solicitudes'); %>
+      <% if (error && error.length > 0) { %>
+      <div class="alert alert-danger" role="alert">
+        <%= error[0] %>
+      </div>
+      <% } %>
+      <h3>S.H.A.R.K.</h3>
+      <h3>Inicio de sesión</h3>
+
+      <label for="username">Nombre de usuario</label>
+      <input type="text" name="username" maxlength="20" placeholder="Usuario123" id="username" <% if (disableInputs) { %>disabled<% } %>>
+
+      <label for="password">Contraseña</label>
+      <input type="password" name="password" placeholder="Contraseña123" id="password" <% if (disableInputs) { %>disabled<% } %>>
+      <span><i class="fa fa-eye" aria-hidden="true" maxlength="20" type="button" id="eye" onclick="togglePassword()"></i></span>
+      <div class="go"><i class="">Bienvenid@! eres nuev@?</i><a href="/signup"> Registrate aqui</a></div>
+      <button type="submit" class="g-recaptcha" data-sitekey="6LdOEXYmAAAAANFTapbBhTFdgaIA1E9zs5hcJ2Zy" data-callback="onSubmit" <%= error && error.length > 0 && error[0].startsWith('Demasiadas solicitudes') ? 'disabled' : '' %> > Iniciar sesión </button>
+      <div class="">
         
-         <div class="go"><i class="">Bienvenid@! eres nuev@?</i><a href="/signup"> Registrate aqui</a></div>
-       </div>
-     </form>
-     <a href="/index" class="float"><br>
-      <i class="fas fa-arrow-left" ><br> Atrás</i>
+        <div class="go"><a href="/index">Volver</a></div>
+      </div>
+    </form>
+
+    
+
+    <a href="https://azurduyandasociadosadmin.onrender.com/" class="float">
+      <i style="font-style: normal;">Ingresar como Abogado</i>
     </a>
-   </body>
-  </html>
+  </body>
+</html>
+
   
