--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,7 +8,16 @@
   <link rel="stylesheet" href="../css/signup-style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <link rel="stylesheet" href="/css/main.css" />
+		<link rel="stylesheet" href="/sass/main.scss">
+		<noscript><link rel="stylesheet" href="/public/css/noscript.css" /></noscript>
 <title>Registro</title>
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+        <script>
+          function onSubmit(token) {
+            document.getElementById("registro").submit();
+          }
+        </script>
     <script>
       window.addEventListener("DOMContentLoaded", () => {
         const previewImage = document.getElementById("preview-image");
@@ -119,82 +128,130 @@
 </head>
 
 <body data-error-msg="<%= error_msg %>">
+  
 <script src="/javascript/validacion"></script>
     <div class="container">
-        <form class="form" action="/signup" method="post" enctype="multipart/form-data" onsubmit="return validateForm();">
-          <h2 style="color: rgb(0, 0, 0);">Formulario de Registro</h2>
-          <div class="form-group">
-            <label for="nombres">Nombres:</label>
-            <input type="text" class="form-control" id="nombres" name="nombres" placeholder="Ingresa tus nombres" maxlength="30" required>
-          </div>
-          <div class="form-group">
-            <label for="apellidos">Apellidos:</label>
-            <input type="text" class="form-control" id="apellidos" name="apellidos" placeholder="Ingresa tus apellidos" maxlength="30" required>
-          </div>
-          <div class="form-group">
-            <label for="username">Nombre de Usuario:</label>
-            <input type="text" class="form-control" id="username" name="username" placeholder="Ingresa tu nombre de usuario" maxlength="30" required>
-            <% if (locals.error_msg && locals.username) { %>
-              <small class="error-message"><%= error_msg %></small>
-            <% } %>
-          </div>
-          <div class="form-group">
-            <label for="ci">Cédula de identidad:</label>
-            <input type="text" class="form-control" id="ci" name="ci" placeholder="Ingresa tu cédula de identidad" maxlength="8" required>
-            <% if (locals.error_msg && locals.ci) { %>
-              <small class="error-message"><%= error_msg %></small>
-            <% } %>
-          </div>
-          <div class="form-group">
-            <label for="direccion">Dirección:</label>
-            <input type="text" class="form-control" id="direccion" name="direccion" placeholder="Ingresa tu dirección" maxlength="30" required>
-          </div>
-          <div class="form-group">
-            <label for="fechanac">Fecha de nacimiento:</label>
-            <input type="date" class="form-control" id="fechanac" name="fechanac" placeholder="Ingresa tu fecha de nacimiento" max="2006-01-01" required>
-          </div>
-          <div class="form-group">
-            <label for="phone">Teléfono:</label>
-            <input type="text" class="form-control" id="phone" name="phone" placeholder="Ingresa tu teléfono" maxlength="8" required>
-            <% if (locals.error_msg && locals.phone) { %>
-              <small class="error-message"><%= error_msg %></small>
-            <% } %>
-          </div>
-          <div class="form-group">
-            <label for="email">Email(solo gmail):</label>
-            <input type="email" class="form-control" id="email" name="email" placeholder="Ingresa tu correo electrónico" maxlength="50" required>
-            <% if (locals.error_msg && locals.email) { %>
-              <small class="error-message"><%= error_msg %></small>
-            <% } %>
-          </div>
-          <div class="form-group">
-            <label for="password">Contraseña:</label>
-            <input type="password" class="form-control" id="password" name="password" placeholder="Ingresa tu contraseña" maxlength="15" required>
-          </div>
-          <% if (locals.success_msg) { %>
-            <div class="alert alert-success">
-              <%= success_msg %>
-              <br />
-              Verifica tu correo electrónico para completar el registro.
-            </div>
-          <% } %>
-          <div class="form-group">
-            <label for="image">Imagen de perfil:</label>
-            <div id="image-preview" class="image-preview">
-              <div class="drop-area">
-                <input type="file" id="image-file" accept=".jpg,.jpeg,.png" name="image">
-                <div class="choose-file">Elegir archivo</div>
-                <p>Arrastra y suelta tu imagen aquí</p>
+      
+      <a href="/index">
+        <img src="https://storage.googleapis.com/primerstorage/LogoA-removebg-preview.png" alt="Azurduy & Asociados" style="max-width: 100%; height: 50px;">
+      </a>
+      <form class="form" id="registro" action="/signup" method="post" enctype="multipart/form-data" onsubmit="return validateForm();">
+        <h2 style="color: #dee3ed">Crear Cuenta</h2>
+        
+        <table>
+          <tr>
+            <td>
+              <div class="form-group">
+                <label for="nombres">Nombres:</label>
+                <input type="text" class="form-control" id="nombres" name="nombres" placeholder="Ingresa tus nombres" maxlength="30" required>
               </div>
-              <img id="preview-image" src="#" alt="Preview Image">
-            </div>
-          </div>
-
-          <button type="submit" class="choose-file">Registrarse</button>
-        </form>
-        <a href="/login" class="float">
-          <i class="fas fa-arrow-left"></i> Atrás
-        </a>
+            </td>
+            <td>
+              <div class="form-group">
+                <label for="apellidos">Apellidos:</label>
+                <input type="text" class="form-control" id="apellidos" name="apellidos" placeholder="Ingresa tus apellidos" maxlength="30" required>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="form-group">
+                <label for="username">Nombre de Usuario:</label>
+                <input type="text" class="form-control" id="username" name="username" placeholder="Ingresa tu nombre de usuario" maxlength="30" required>
+                <% if (locals.error_msg && locals.username) { %>
+                  <small class="error-message"><%= error_msg %></small>
+                <% } %>
+              </div>
+            </td>
+            <td>
+              <div class="form-group">
+                <label for="ci">Cédula de identidad:</label>
+                <input type="text" class="form-control" id="ci" name="ci" placeholder="Ingresa tu cédula de identidad" maxlength="8" required>
+                <% if (locals.error_msg && locals.ci) { %>
+                  <small class="error-message"><%= error_msg %></small>
+                <% } %>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="form-group">
+                <label for="direccion">Dirección:</label>
+                <input type="text" class="form-control" id="direccion" name="direccion" placeholder="Ingresa tu dirección" maxlength="30" required>
+              </div>
+            </td>
+            <td>
+              <div class="form-group">
+                <label for="fechanac">Fecha de nacimiento:</label>
+                <input type="date" class="form-control" id="fechanac" name="fechanac" placeholder="Ingresa tu fecha de nacimiento" max="2006-01-01" required>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="form-group">
+                <label for="phone">Teléfono:</label>
+                <input type="text" class="form-control" id="phone" name="phone" placeholder="Ingresa tu teléfono" maxlength="8" required>
+                <% if (locals.error_msg && locals.phone) { %>
+                  <small class="error-message"><%= error_msg %></small>
+                <% } %>
+              </div>
+            </td>
+            <td>
+              <div class="form-group">
+                <label for="email">Email(solo gmail):</label>
+                <input type="email" class="form-control" id="email" name="email" placeholder="Ingresa tu correo electrónico" maxlength="50" required>
+                <% if (locals.error_msg && locals.email) { %>
+                  <small class="error-message"><%= error_msg %></small>
+                <% } %>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td colspan="2">
+              <div class="form-group">
+                <label for="password">Contraseña:</label>
+                <input type="password" class="form-control" id="password" name="password" placeholder="Ingresa tu contraseña" maxlength="15" required>
+              </div>
+            </td>
+          </tr>
+          <% if (locals.success_msg) { %>
+            <tr>
+              <td colspan="2">
+                <div class="alert alert-success">
+                  <%= success_msg %>
+                  
+                  Verifica tu correo electrónico para completar el registro.
+                </div>
+              </td>
+            </tr>
+          <% } %>
+          <tr>
+            <td colspan="2">
+              <div class="form-group">
+                <label for="image">Imagen de perfil:</label>
+                <div id="image-preview" class="image-preview">
+                  <div class="drop-area">
+                    <input type="file" id="image-file" accept=".jpg,.jpeg,.png" name="image">
+                    <div class="choose-file">Elegir archivo</div>
+                    <p>Arrastra y suelta tu imagen aquí</p>
+                  </div>
+                  <img id="preview-image" src="#" alt="Preview Image">
+                </div>
+              </div>
+            </td>
+          </tr>
+         
+        </table>
+        <div style="display: flex; justify-content: center; ">
+          <button type="submit" class="choose-file g-recaptcha" style="width: 100%;"  data-sitekey="6LcsGnYmAAAAAM-QRxnsyUxJSHPThtztnUD2A06r" data-callback="onSubmit">Registrarse</button>
+        </div>
+        
+       
+      </form>
+      <div style="display: flex; justify-content: center; ">
+        <a href="/index" style="width: 100%;"> <button type="" class="choose-file" style="width: 100%; background-color: #d90e00;">Cancelar</button></a>
+       </div>
         
       </div>
       <script>
@@ -250,4 +307,13 @@
       </script>
       
 </body>
+<!-- Scripts -->
+<script src="/javascript/jquery.min.js"></script>
+<script src="/javascript/jquery.scrolly.min.js"></script>
+<script src="/javascript/jquery.dropotron.min.js"></script>
+<script src="/javascript/jquery.scrollex.min.js"></script>
+<script src="/javascript/browser.min.js"></script>
+<script src="/javascript/breakpoints.min.js"></script>
+<script src="/javascript/util.js"></script>
+<script src="/javascript/main.js"></script>
 </html>
