--- a/views/login.ejs
+++ b/views/login.ejs
@@ -64,6 +64,7 @@
       <input type="password" name="password" placeholder="Contraseña123" id="password" <% if (disableInputs) { %>disabled<% } %>>
       <span><i class="fa fa-eye" aria-hidden="true" maxlength="20" type="button" id="eye" onclick="togglePassword()"></i></span>
       <div class="go"><i class="">Bienvenid@! eres nuev@?</i><a href="/signup"> Registrate aqui</a></div>
+      <a href="/forgot-password">Olvide mi Contraseña</a>
       <button type="submit" class="g-recaptcha" data-sitekey="6LdOEXYmAAAAANFTapbBhTFdgaIA1E9zs5hcJ2Zy" data-callback="onSubmit" <%= error && error.length > 0 && error[0].startsWith('Demasiadas solicitudes') ? 'disabled' : '' %> > Iniciar sesión </button>
       <div class="">
         
