--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -48,7 +48,7 @@
             <input type="text" id="apellidos" name="editapellidos" value="<%= user.apellidos %>">
           </div>
           <div>
-            <label for="editusername">Username:</label>
+            <label for="editusername">Nombre de usuario:</label>
             <input type="text" id="username" name="editusername" value="<%= user.username %>">
           </div>
           
@@ -74,7 +74,7 @@
 
         <div id="userInfo">
         <div>
-          <label>Username:</label>
+          <label>Nombre de usuario:</label>
           <p><%= user.username %></p>
         </div>
         <div>
