--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -244,7 +244,7 @@
          
         </table>
         <div style="display: flex; justify-content: center; ">
-          <button type="submit" class="choose-file g-recaptcha" style="width: 100%;"  data-sitekey="6LcsGnYmAAAAAM-QRxnsyUxJSHPThtztnUD2A06r" data-callback="onSubmit">Registrarse</button>
+          <button type="submit" class="choose-file" style="width: 100%;">Registrarse</button>
         </div>
         
        
